tests/machine/x/fs/json_builtin.fs
// Generated by Mochi compiler v0.10.27 on 2025-07-17T07:47:25Z
open System
open System.Text.Json

type Anon1 = {
    a: int
    b: int
}
let m: Anon1 = { a = 1; b = 2 }
printfn "%A" (JsonSerializer.Serialize(m))
